--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta content="Página desenvolvida para aulas práticas da Faculdade Pitágoras">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title> Minha Página Gondim </title>
 </head>
   <body>
-    <h1>Guilherme Resende Gondim</h1>
+
+    <div>
+      <div>
+        <img src="avatar.jpeg" id="avatar">
+        <br>
+        <h1>Guilherme Resende Gondim</h1>
+          <p>Contato: grgondim09@gmail.com
+          </p>
+      </div>
+    </div>
+
+    <div id="conteudo">
+      <br>
     <h2>Escolaridade</h2>
       <h3>Ensino Superior</h3>
         <p>Cursado na Escola Estadual Prof. José Ignácio de Sousa</p>
@@ -14,9 +28,12 @@
       <h3>Curso Técnico</h3>
         <p>Formado em Tecnico de Redes de Computadores pela IFTM Uberlândia Centro</p>
     <hr>
+    <br>
     <h2>Experiências Profissionais</h2>
        <h3>Rocha Neto consultoria em TI</h3>
         <p>Julho de 2015 - Atualmente</p>
-        Atuando como Suporte Nivel 2 em atendimento ao cliente a também desenvolvendo/executando a implantação de servidores e cabeamento estruturado.
+        <p>Atuando como Suporte Nivel 2 em atendimento ao cliente a também desenvolvendo/executando a implantação de servidores e cabeamento estruturado.</p>
+    </div>
+
   </body>
 </html>
