--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta content="Página desenvolvida para aulas práticas da Faculdade Pitágoras">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title> Minha Página Gondim </title>
+  <title> Minha Página </title>
 </head>
   <body>
 
     <div>
       <div>
-        <img src="avatar.jpeg" id="avatar">
+        <img src="assets/avatar.jpeg" id="avatar">
         <br>
         <h1>Guilherme Resende Gondim</h1>
           <p>Contato: grgondim09@gmail.com
